--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   ],
   "scripts": {
     "build": "cross-env NODE_ENV=production rollup --config rollup.config.js",
-    "build-dev": "cross-env NODE_ENV=development rollup --config rollup.config.js --watch"
+    "dev": "cross-env NODE_ENV=development rollup --config rollup.config.js --watch"
   },
   "repository": {
     "type": "git",
